Burger menu issue on iOS webkit
Attempt to fix the menu not opening in Safari.

--- a/assets/themes/default/_header.scss
+++ b/assets/themes/default/_header.scss
@@ -16,6 +16,7 @@ body > header {
     padding: 1em 1em 1em 2em;
     background: $primary;
     align-self: flex-start;
+    -webkit-transform: translateZ(0);
 
     a {
       transform: skewX(15deg);
